--- a/CSS/assets/advanced_selectors.css
+++ b/CSS/assets/advanced_selectors.css
@@ -65,6 +65,7 @@ ol li:nth-of-type(2n) {
 
 h2 + .user_review {
   border-top: 1px solid black;
+  background-color: yellow
 }
 
 input[type='radio'] {
